--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.14.16",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.15",
@@ -9,6 +10,7 @@
     "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.interaction.toolkit": "2.0.2",
+    "com.unity.xr.management": "4.2.1",
     "com.unity.xr.oculus.standalone": "2.38.4",
     "com.unity.xr.openvr.standalone": "2.0.5",
     "com.unity.modules.ai": "1.0.0",
